Contrast mode and Keyboard navigation corrections

--- a/assets/scss/components/_accessibility-menu.scss
+++ b/assets/scss/components/_accessibility-menu.scss
@@ -1,5 +1,4 @@
 .accessibility-menu {
-  //background-color: white;
   height: auto;
 
   div {
@@ -9,9 +8,6 @@
 
   .container {
     margin: 10px auto;
-  }
-
-  #accessibility-high-contrast {
   }
 
   ul {
